# mcp_skeleton

./: README.md  pyproject.toml
mcp_skeleton/: __init__.py  server.py
